<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2014  Shlomo Zalman Heigh

   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<resources>

    <string name="app_name">Breakify</string>
    <string name="start">START</string>
    <string name="stop">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="reset">Reset</string>
    <string name="reset_toast">Timer reset</string>
    <string name="minutes">minutes</string>
    <string name="state_working">WORKING</string>
    <string name="state_breaking">BREAKING</string>
    <string name="start_break_prompt">Time to get up, walk around and stretch your legs.\nReady to go on to your break?</string>
    <string name="start_work_prompt">Did you enjoy your break?\nReady to resume working?</string>
    <string name="ok">OK</string>
    <string name="snooze">Snooze</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="skip_toast">Skipped to</string>

    <!-- Scheduled start -->
    <string name="scheduled_dialog_title">Scheduled Start</string>
    <string name="scheduled_dialog_message">Ready to start working?</string>

    <!-- Notifications -->
    <string name="notif_upcoming_title_working">Working</string>
    <string name="notif_upcoming_title_breaking">Breaking</string>
    <string name="notif_upcoming_content_text">Until</string>

    <string name="notif_ring_title">Time\'s up!</string>
    <string name="notif_ring_content_text_working">It\'s time to start your break</string>
    <string name="notif_ring_content_text_breaking">It\'s time to get back to work</string>

    <!-- Custom alarm tones -->
    <string name="alarmtone_title_tone1">Breakfiy Alarm 1</string>
    <string name="alarmtone_title_tone2">Breakify Alarm 2</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>

    <string name="pref_category_durations">Timer Durations</string>
    <string name="pref_work_duration">Work duration</string>
    <string name="pref_break_duration">Break duration</string>
    <string name="pref_snooze_duration">Snooze duration</string>

    <string name="pref_category_scheduled">Scheduled Start</string>
    <string name="pref_scheduled_start_time">Time to start</string>
    <string name="pref_scheduled_days">Days of the week</string>
    <string name="pref_scheduled_days_sunday">Sunday</string>
    <string name="pref_scheduled_days_monday">Monday</string>
    <string name="pref_scheduled_days_tuesday">Tuesday</string>
    <string name="pref_scheduled_days_wednesday">Wednesday</string>
    <string name="pref_scheduled_days_thursday">Thursday</string>
    <string name="pref_scheduled_days_friday">Friday</string>
    <string name="pref_scheduled_days_saturday">Saturday</string>

    <string name="pref_scheduled_disabled">Off</string>
    <string name="pref_scheduled_days_everyday">Everyday</string>
    <string name="pref_scheduled_days_sunday_initials">Su</string>
    <string name="pref_scheduled_days_monday_initials">Mo</string>
    <string name="pref_scheduled_days_tuesday_initials">Tu</string>
    <string name="pref_scheduled_days_wednesday_initials">We</string>
    <string name="pref_scheduled_days_thursday_initials">Th</string>
    <string name="pref_scheduled_days_friday_initials">Fr</string>
    <string name="pref_scheduled_days_saturday_initials">Sa</string>
    <string name="pref_scheduled_at">at</string>

    <string name="pref_category_alarm">Alarm</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="pref_volume">Volume</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="ringtone_none">None</string>

    <string name="pref_category_misc">Misc.</string>
    <string name="pref_analytics_enabled">Enable Analytics</string>
    <string name="pref_analytics_enabled_summary">Send usage statistics</string>

</resources>
