<!--
   Copyright (C) 2014  Shlomo Zalman Heigh

   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:animateLayoutChanges="true">


    <TextView
        android:id="@+id/state_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/state_working"
        android:textSize="32sp" />

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="4dp"
        android:background="@drawable/skip_btn_background"
        android:drawableEnd="@android:drawable/ic_media_play"
        android:drawableRight="@android:drawable/ic_media_play"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/timer_layout"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <com.heightechllc.breakify.CircleTimerView
            android:id="@+id/circle_timer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="0dp" />

        <TextView
            android:id="@+id/time_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/start_stop_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="40dp"
            android:text="@string/start"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/reset_btn"
            android:src="@drawable/ic_action_reset"
            android:contentDescription="@string/reset"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="bottom|end"
            android:visibility="gone" />

    </FrameLayout>

    <fragment
        android:id="@+id/duration_display_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.heightechllc.breakify.DurationsDisplayFragment"
        tools:layout="@layout/fragment_durations_display" />

</LinearLayout>
